base/minio/console/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
  namespace: minio
  labels:
    app: minio
    component: console
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
      component: console
  template:
    metadata:
      labels:
        app: minio
        component: console
    spec:
      containers:
        - name: minio-console
          image: minio/console:v0.9.5
          imagePullPolicy: IfNotPresent
          args:
            - server
          ports:
            - containerPort: 9090
          startupProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 30
      restartPolicy: Always
      automountServiceAccountToken: false
