base/minio/console/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: minio
    component: console
  type: ClusterIP
